# pnr-scraper

./: .gitattributes  .gitignore  Cargo.toml  README.md  setup.ps1
.cargo/: config.toml
.github/workflows/: codacy.yml  codeql.yml  devskim.yml  ossar.yml
src/: api.rs  captcha-copy.txt  captcha.rs  main-copy.txt  main.rs  models.rs  ui-copy.txt  ui.rs
