[package]
name = "pnr-scraper"
version = "0.0.2"
edition = "2024"
description = "Indian Railways PNR Status Checker"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies", "gzip", "brotli", "deflate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
leptess = "0.14"
clap = { version = "4", features = ["derive"] }
colored = "2"
chrono = "0.4"
regex = "1"
futures = "0.3"
dirs = "5"
anyhow = "1"
bytes = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
